--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,11 +1,43 @@
-body {
+* {
     margin: 0;
 }
+/* mobile first */
+.flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+}
+  
+@media (min-width: 768px) {
+    .flex-container {
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    }
+}
+img.pro-pic {
+    width:45%;
+    /* padding: 10%;
+    margin:auto; */
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    
+}
+.c2 {
+    padding: 10%;
+}
 .navbar ul{
+    height:auto;
+    width:100%;
     background-color: black;
     margin:0;
-    padding:0;
-
+    padding: 0;
 }
 .navbar a{
     list-style-type: none;
@@ -14,4 +46,14 @@ body {
     display:inline-block;
     overflow:hidden;
     color:white;
+    font-size: large;
+}
+.navbar a:hover{
+    background-color: white;
+    color: black;
+}
+
+.container,.title {
+    color:blue;
+    text-align:center;
 }
