--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,5 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:ital,wght@1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Birthstone&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merienda:wght@700&display=swap');
+
 * {
     margin: 0;
+    font-family: 'open sans';
+    background-color: #E4FDE1;
 }
 /* mobile first */
 .flex-container {
@@ -18,7 +26,7 @@
     }
 }
 .flex-container >div{
-    padding:5%;
+    padding:3%;
     margin:auto;
 }
 
@@ -29,6 +37,7 @@ img.pro-pic {
 
 h1.full-name
 {
+    font-family: 'Merienda', cursive;
     font-size: 8vw;;
 }
 .navbar ul{
@@ -38,19 +47,23 @@ h1.full-name
     margin:0;
     padding: 0;
 }
+.navbar li{
+    background-color: black;
+}
+.navbar li:hover{
+    color: tomato;
+}
 .navbar a{
     list-style-type: none;
     text-decoration: none;
-    padding:2%;
+    padding:1%;
     display:inline-block;
     overflow:hidden;
+    background-color: black;
     color:white;
     font-size: large;
 }
-.navbar a:hover{
-    background-color: white;
-    color: black;
-}
+
 
 .container,.title {
     color:blue;
@@ -62,4 +75,27 @@ h1.full-name
 }
 .skills-img {
     width:30%;
+}
+h1 {
+    font-family: 'Merienda';
+}
+h2 {
+    color: tomato;
+    font-family: 'bebas neue';
+}
+h2 {
+    padding: 1%;
+    text-align: center;
+    font-size: xx-large;
+}
+h3 {
+    font-size: x-large;
+    padding:2%;
+}
+p {
+    padding:2%;
+}
+.foot-note{
+    color: white;
+    background-color: black;
 }
